# obsidian-rag-project

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  TODO.md  chroma.py  config.py  docker-compose.yml  embed.py  embed_example.py  langchain_chroma_example.py  main.py  note.py  parsing.py  pyproject.toml  query_planner.py  retriever.py  ruff.toml  test_parsing.py  vault_total_links_v3.json
docs/: PRD.md  Pre-Processor-PRD.md  README.md  TODO.md  architecture.md  backend-replacement-plan.md  cli-dream.md  filter-fix.md  migration-plan.md  mvp-checklist.md  new-test-plan.md  product-requirements.md  refactoring-plan.md  roadmap.md  technical-spec.md  user-query-flow-0717.md  user-query-flow-detailed.md  user-query-flow-pipes.md
src/core/: __init__.py  embed.py  note.py  parsing.py  query_planner.py  retriever.py
src/core/ingestion/: __init__.py  processor.py  scanner.py  vector_manager.py
src/utils/: __init__.py  count_wikilink_notes.py  test_runner.py
tests/: conftest.py  test_agent.py  test_new_parsers.py  test_new_tag_parser.py  test_note.py  test_parsing.py  test_query_planner.py  test_retriever.py
tests/integration/: test_agent.py  test_ingestion_pipeline.py  test_vault_indexing.py
tests/unit/: conftest.py  test_collection_indexing.py  test_embedding_generation.py  test_note.py  test_parsing.py  test_qdrant_client.py  test_qdrant_queries.py  test_query_embedding.py  test_query_planner.py  test_query_transformation.py  test_retriever.py  test_vault_scanner.py  test_vector_generation.py  test_vector_store_population.py
utils/: test_runner.py
