[project]
name = "obsidian-rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "langchain-community>=0.2.10",
    "llama-cpp-python>=0.2.83",
    "uv>=0.2.11",
    "requests>=2.32.3",
]
[tool.basedpyright]
reportCallIssue = "none"
